--- a/YangMillsRiemannSurface/YangMillsRiemannSurface.tex
+++ b/YangMillsRiemannSurface/YangMillsRiemannSurface.tex
@@ -648,7 +648,8 @@ d^*_A d_A\eta + \star[\eta,\star F_A] = 0
 \]
 \end{proof}
 %
-%TODO Hessian?
+The second variation should be thought of as the Hessian to the Yang-Mills functional,
+which will allow us to apply Morse theory techniques to the space of connections.
 %
 \section{The $U(1)$ Case}
 %
@@ -660,8 +661,8 @@ differential forms. Likewise, using triviality of $\g_P$, we can identify
 $\g_P$-valued forms with ordinary differential forms on $M$. The vertical bundle
 in this case is a trivial line bundle over $P$, and there is a unique $U(1)$-invariant
 vertical vector field on $P$, which on each fiber restricts to the vector field dual
-to $d\theta$. Then given a connection $A$ on $P$, we have that $dA = \pi^*F_A$,
-since $[A,A] = 0$. This immediately tells us that $F_A$ is closed, since $d$
+to the Maurer-Cartan form$\theta$. Then given a connection $A$ on $P$, we have that
+$dA = \pi^*F_A$, since $[A,A] = 0$. This immediately tells us that $F_A$ is closed, since $d$
 commutes with pullback. Furthermore, for any other connection $A + \eta$, we have that
 \[
 F_{A+\eta} = F_A + \frac{1}{2}[\eta,\eta] + d_A\eta
@@ -669,12 +670,59 @@ F_{A+\eta} = F_A + \frac{1}{2}[\eta,\eta] + d_A\eta
 Then since $d_A = d$ and $[\eta,\eta] = 0$, this gives us that
 $F_{A+\eta} = F_A + d\eta$, which tells us that the cohomology class of $F_A$ is
 independent of our choice of $A$. Using our sign convention, this is equal to
-$-2\pi i c_1(P)$. Furthermore, in this situation, the Yang-Mills functional reduces
+$-2\pi i c_1(P)$. In addition, it tells us that every representative
+of the curvature class can be realized as the curvature of some connection.
+Furthermore, in this situation, the Yang-Mills functional reduces
 to the standard Hodge theory picture, since the $L^2$ norm will coincide with the
 $L^2$ norm on differential forms. Therefore, a Yang-Mills connection on $P$ is equivalent
 to finding the unique connection that minimizes the $L^2$ norm in the cohomology class
-$2\pi i c_1(P)$. By standard Hodge theory, this gives us that every $U(1)$-bundle $P$
-admits a Yang-Mills connection.
+$2\pi i c_1(P)$. By standard Hodge theory, there exists a unique harmonic representative of
+the curvature class, and the Yang-Mills connections for $P$ are a torsor over the space
+$Z^1_P$ of closed $1$-forms. In total, this gives us the fibration
+\[\begin{tikzcd}
+Z^1_M \ar[r] & \mathscr{A}_{\text{YM}}(P) \ar[d] \\
+& 2\pi i c_1(P)
+\end{tikzcd}\]
+In the flat case $c_1(P) = 0$, the Yang-Mills connections
+are just flat connections, which are parameterized by conjugacy classes of homomorphisms
+$\pi_1(M) \to U(1)$. \\
+
+With this information, we can construct the Yang-Mills moduli space
+$\mathscr{A}_{\text{YM}}(P) / \mathscr{G}(P)$ in this simple case. Since the
+conjugation action is trivial, the bundle $\mathrm{Ad}(P)$ is a trivial bundle,
+so the gauge group is just $\mathscr{G}(P) = \mathrm{Map}(M,U(1))$. Given
+$f : M \to U(1)$, the action of $f$ on a connection $A$ is given by
+\[
+A \mapsto A + \pi^*f^*\theta
+\]
+The gauge group acts on $Z^1_M$ in the same way, so if we fix some reference Yang-Mills
+connection $A_0$ to identify $\mathscr{A}_{\text{YM}}(P)$ with $Z^1_M$, the
+group actions are identified. Therefore, it suffices to compute the quotient
+of $Z^1_M/\mathscr{G}(P)$. To compute this quotient, we do it in two steps,
+first quotienting by the identity component $\mathscr{G}_0(P)$, and then quotienting
+by the component group $\pi_0\mathscr{G}(P)$. The components of $\mathscr{G}(P)$
+are simply the homotopy classes of maps $M \to S^1$, so $\mathscr{G}_0(P)$ consists
+of all nullhomotopic maps $M \to S^1$. Let $dx$ denote the standard form
+on $\R$. Then any nullhomotopic map $f \in \mathscr{G}_0(P)$ lifts to a function
+$\tilde{f} : M \to \R$ that exponentiates to $f$. Since the Maurer-Cartan form
+on $S^1$ pulls back to $dx$, we find that $f^*\theta = d\tilde{f}$. Therefore,
+the action of $\mathscr{G}_0(P)$ on $Z^1_M$ is given by the addition of exact
+$1$-forms, giving us that the quotient $Z^1_M / \mathscr{G}_0(P)$ is
+$H^1(M,\R)$. Then since $S^1$ is a $K(\Z,1)$, we know that homotopy classes
+of maps $M \to S^1$ are in bijection with $H^1(M,\Z)$. Therefore, by quotieting
+by $\mathscr{G}_0(P)$ and putting everything together, we get isomorphism
+\[
+\mathscr{A}_{\text{YM}}(P) /\mathscr{G}(P) \cong Z^1_M/\mathscr{G}(P)
+\cong \mathrm{Jac}(M) \defeq H^1(X,\R)/H^1(X,\Z)
+\]
+which is isomorphic to a torus $\mathbb{T}^{b_1(M)}$. However, we note that in general,
+this isomorphism is highly non-canonical -- to make the identification of
+$\mathscr{A}_{\text{YM}}(P)$ with $Z^1_M$, we need to fix a reference connection. In
+general, there is no canonical choice of reference except in the case where $P$ is a
+trivial bundle, in which case the trivial connection defines a canonical reference
+connection. As we'll see soon, this reflects the fact that $\mathscr{A}_{YM}(P)$
+is a $\mathrm{Jac}(M)$-torsor when $P$ is a $U(1)$-bundle.
+%
 %
 \section{Yang-Mills Over a Riemann Surface}
 %
@@ -692,6 +740,12 @@ $d = \partial + \dbar$. Then given a principal bundle $P \to M$, We get a simila
 decomposition for $\Omega^1_M(\g_P)$ after complexification giving a decomposition
 $d_A = \partial_A + \dbar_A$ for any connection $A \in \mathscr{A}(P)$.
 \fi
+%TODO Identification of space of Yang-Mills connections with
+%homomorphisms from central extension.
+%Idea : Use reference connection on Q to make sense of a "flat part"
+%Observe that the gauge transformations only act on the "flat part"
+%Central element determines the topology, rest is a flat connection
+%Remark of action of Jacobian on the moduli space
 We now restrict our attention to when $M$ is a orientable surface, with genus $g > 0$.
 Let $Q \to M$ be a principal $U(1)$ bundle with $c_1(Q) = 1$, i.e.
 \[
@@ -700,9 +754,11 @@ Let $Q \to M$ be a principal $U(1)$ bundle with $c_1(Q) = 1$, i.e.
 Then fix a Riemannian metric on $M$ with volume form $\omega$ such that
 $\int_M \omega = 1$, and Yang-Mills connection $A$ on $Q$. Since $c_1(Q) = 1$, we have
 that $[c_1(Q)] = [\omega]$. Furthermore, since $\star\omega = 1$ and
-$[-2\pi i c_1(Q)] = [F_A]$, we get that the curvature of $A$ must be equal to
-$-2\pi i \omega$ to minimize the Yang-Mills functional. Then let $\widetilde{M} \to M$
-be the universal cover of $M$. Since the genus of $M$ is at least $1$, $\widetilde{M}$
+$-2\pi i c_1(Q) = [F_A]$, we get that the curvature of $A$ must be equal to
+$-2\pi i \omega$ to minimize the Yang-Mills functional. Similarly, for any other
+$U(1)$-bundle $P$, the curvature of a Yang-Mills connection must be
+$-2\pi i c_1(P)\omega$. Then let $\widetilde{M} \to M$ be the universal cover of $M$.
+Since the genus of $M$ is at least $1$, $\widetilde{M}$
 is contractible, so the pullback of $Q$ along the covering projection gives us a
 trivial $U(1)$ bundle over $\widetilde{M}$
 \[\begin{tikzcd}
@@ -725,7 +781,7 @@ follows from the fact that the holonomy about any loop bounding a disk is equal 
 integral of the curvature, and the fact that $c_1(Q)$ is represented by
 the curvature class of any connection, divided by $2\pi i$. Therefore, if we
 consider the pullback connection on $\widetilde{M} \times U(1)$, the holonomy
-about the lifts of the boundary paths to $\widetilde{M}$ will also be $2\pi$,
+about the lifts of the boundary path to $\widetilde{M}$ will also be $2\pi$,
 which then lifts to translation by $1$ in the bundle $\widetilde{M} \times \R$.
 This gives the relation that $\prod_i [a_i,b_i] = J$, which gives us a presentation
 of the group $\Gamma_\R$. Since $\pi_1(M)$ is discrete, $\widetilde{M}$ is a flat
@@ -788,7 +844,7 @@ element $X_\rho \in \g$. Centrality of $\R$ then implies that
 the image of $\Gamma_\R$ preserves $X_\rho$ under the adjoint action, so we may
 regard $\rho$ as a homomorphism $\Gamma_\R \to G_{X_\rho}$. Combining this observation
 with the previous one, we can then reduce to the case where $X$ is preserved
-by all of $G$ (i.e. $G = G_X$). \\
+by all of $G$ (i.e. $G = G_X$, which is equivalent to $X$ lying in the center of $\g$). \\
 
 To complete the proof of the first claim, we want to reduce to the cases where
 $G$ is either a torus or a semisimple group. This follows from the fact
@@ -803,7 +859,47 @@ sheeted covering $P \to \overline{P}$. Since this covering is a local diffeomorp
 we get an identification $TP \cong \pi^*T\overline{P}$ where $\pi : P \to \overline{P}$
 is the covering projection. Therefore, we get that the horizontal distribution on
 $P$ induces a horizontal distribution on $\overline{P}$, and conversely, we get
-that a connection on $\overline{P}$ lifts to a horizontal distribution on $P$.
+that a connection on $\overline{P}$ lifts to a horizontal distribution on $P$, so we
+may reduce to the case $P = \overline{P}$. In addition, since any map
+$\Gamma_\R \to G$ gives a map $\overline{\rho} : \Gamma_\R \to \overline{G}$ by
+composition with the quotient map. Then since we assume that $\dt{\rho}(1) = X$ is
+central, we have that the image of $\R \subset \Gamma_\R$ is a $1$-parameter subgroup
+of $G$ lying in the center. Furthermore, we have that $\Z$ is contained in the commutator
+subgroup $[\Gamma_\R,\Gamma_\R]$, so its image under $\rho$ is central in $G$ and
+lies in the maximal semisimple $S = [G,G]$, so $\rho(\Z) \subset D$. Therefore, the
+map $\overline{\rho}$ descends to a map $\Gamma_\R / \Z \to \overline{G}$. Then since
+$\Gamma_\R / \Z \cong U(1) \times \pi_1(M)$. Then since $\overline{G}$ is the
+product group $\overline{H} \times \overline{S}$, we have that $\overline{\rho}$
+is given by a pair of homomorphisms $\alpha : U(1) \times \pi_1(M) \to \overline{H}$
+and $\beta : U(1) \times \pi_1(M) \to \overline{S}$. Furthermore, since $\overline{S}$
+is semisimple, it has a finite center, so centrality of $X$ implies that $\beta$
+is trivial on the $U(1)$ factor, so it is actually a map
+$\beta : \pi_1(M) \to \overline{S}$, which is exactly the data of a principal
+$\overline{S}$-bundle with flat connection, which in particular, is a
+$\overline{S}$-bundle with Yang-Mills connection. \\
+
+%TODO Verify in the U(1) case, pass to U(1) x ... x U(1) case
+We are left to consider the homomorphism $\alpha$, which amounts to understanding
+Yang-Mills connections when structure group is a torus $U(1) \times \cdots \times U(1)$.
+By passing to associate bundles, this is equivalent to passing to a direct sum
+of Hermitian line bundles, each equipped with a Yang-Mills connection. \\
+
+For the second part, we use the fact that for a group $G$, we have that principal
+$G$-bundles over the surface $M$ are classified by $H^2(M, \pi_1(G)) = \pi_1(G)$.
+In our case, $\overline{G} = \overline{H} \times \overline{S}$, so we have
+\[
+\pi_1(G) = \pi_1(\overline{H}) \oplus \pi_1(\overline{S})
+\]
+By restricting to a copy of $U(1)$, the map $\alpha$ determines
+a class in $\pi_1(\overline{H}) \cong \Z^n$, which can be thought of as
+choosing the first Chern class for each direct summand of a vector bundle.
+For $\beta$, we need to do some additional work. The homomorphism
+$\beta : \pi_1(M) \to \overline{S}$ defines a group action of $\pi_1(M)$ on
+$\overline{S}$, which can be lifted to an action of $\Gamma_\Z$ on the universal
+cover of $\overline{S}$. The image of the central element $J \in \Gamma_\Z$ in the
+universal cover is an element of the center (since we assumed that $G = G_X$),
+which is equivalent to an element of $\pi_1(\overline{S})$, since $\overline{S}$ is
+the quotient of the universal cover by a subgroup of the center.
 \end{proof}
 %
 \section{The Symplectic Viewpoint}
