--- a/ddbar/ddbar.tex
+++ b/ddbar/ddbar.tex
@@ -236,30 +236,30 @@
 For any complex manifold $X$, we have the Fr\"olicher spectral sequence, which
 computes the de Rham cohomology of a complex manifold in terms of the
 $\partial$ and $\dbar$ cohomology. On the $E_0$ page, it is given
-by the Dolbeault cohomology of the bundles $\Omega^{p,0}$, i.e. the item
-in the $(p,q)$ position is the bundle $\Omega^{p,q}$ of $(p,q)$ forms, and
-the differential on $E_0$ is just $\dbar$. For example, a small section of
+by the Dolbeault cohomology of the holomorphic vector bundles $\Omega^{p,0}$, i.e.
+the item in the $(p,q)$ position is the space $\mathcal{A}^{p,q}$ of smooth $(p,q)$
+forms, and the differential on $E_0$ is just $\dbar$. For example, a small section of
 the $E_0$ page would be: \\
 %
 \begin{sseqdata}[name=Frolicher0, classes = {draw = none}, yscale=2, xscale=2]
-\class["\Omega^{0,0}"](0,0)
-\class["\Omega^{1,0}"](1,0)
-\class["\Omega^{2,0}"](2,0)
-\class["\Omega^{3,0}"](3,0)
-\class["\Omega^{0,1}"](0,1)
+\class["\mathcal{A}^{0,0}"](0,0)
+\class["\mathcal{A}^{1,0}"](1,0)
+\class["\mathcal{A}^{2,0}"](2,0)
+\class["\mathcal{A}^{3,0}"](3,0)
+\class["\mathcal{A}^{0,1}"](0,1)
 %
-\class["\Omega^{1,1}"](1,1)
-\class["\Omega^{2,1}"](2,1)
-\class["\Omega^{3,1}"](3,1)
+\class["\mathcal{A}^{1,1}"](1,1)
+\class["\mathcal{A}^{2,1}"](2,1)
+\class["\mathcal{A}^{3,1}"](3,1)
 \d["\dbar"']0(0,0)(0,1)
 \d["\dbar"']0(1,0)(1,1)
 \d["\dbar"']0(2,0)(2,1)
 \d["\dbar"']0(3,0)(3,1)
 %
-\class["\Omega^{0,2}"](0,2)
-\class["\Omega^{1,2}"](1,2)
-\class["\Omega^{2,2}"](2,2)
-\class["\Omega^{3,2}"](3,2)
+\class["\mathcal{A}^{0,2}"](0,2)
+\class["\mathcal{A}^{1,2}"](1,2)
+\class["\mathcal{A}^{2,2}"](2,2)
+\class["\mathcal{A}^{3,2}"](3,2)
 \d["\dbar"']0(0,1)(0,2)
 \d["\dbar"']0(1,1)(1,2)
 \d["\dbar"']0(2,1)(2,2)
