--- a/CechCohomologyLineBundles/ComplexGeometryNotes.tex
+++ b/CechCohomologyLineBundles/ComplexGeometryNotes.tex
@@ -246,11 +246,12 @@
 %
 \input{src/ChernConnection.tex}
 %
+\input{src/VanishingTheorems.tex}
+%
 \newpage
 %
 \nocite{*}
 %
 \printbibliography
-%
 %
 \end{document}
