--- a/CechCohomologyLineBundles/src/CohomologyComparison.tex
+++ b/CechCohomologyLineBundles/src/CohomologyComparison.tex
@@ -3,7 +3,7 @@
 The fact that many of the sheaves we encounter naturally have trivial sheaf cohomology
 might come as a surprise, since we know we can extract topological data from
 these sheaves. The reason for this is that they provide good resolutions of
-other sheaves with nontrivial sheaf cohomology. U
+other sheaves with nontrivial sheaf cohomology. 
 %
 \begin{prop}[Poincar\'e Lemma]
 Every closed smooth $k$-form $\omega$ is locally exact, i.e. for a sufficiently
